# monochrome_filter

./: Makefile  Makefile.am  Makefile.in  README.md  gstmonochromefilter.c  gstmonochromefilter.h  gstmonochromefilterplugin.c  libgstmonochromefilter.la  libgstmonochromefilter_la-gstmonochromefilter.lo  libgstmonochromefilter_la-gstmonochromefilterplugin.lo
