plugin_LTLIBRARIES = libgstmonochromefilter.la

# sources used to compile this plug-in
libgstmonochromefilter_la_SOURCES = gstmonochromefilterplugin.c gstmonochromefilter.c gstmonochromefilter.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstmonochromefilter_la_CFLAGS = $(GST_CFLAGS)
libgstmonochromefilter_la_LIBADD = $(GST_LIBS)
libgstmonochromefilter_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstmonochromefilter_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

